Fix "people" box alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -318,7 +318,7 @@ $colsep: 0.8rem;
   margin-right: -$colsep;
 
   .category {
-    max-width: 14rem;
+    width: 10rem;
     padding: 0 $colsep;
     margin-bottom: 1rem;
 
